[tool.poetry]
name = "pygsc"
version = "0.7"
description = "Run command-line demos from a script."
authors = ["CD Clark III <clifton.clark@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
pyparsing = "*"
blessed = "*"
urwid = "*"
pygame = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-pudb = "^0.7.0"
pexpect = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

gsc="pygsc.cli:gsc"
gsc-record="pygsc.cli:gsc_record"
gsc-display-keycodes="pygsc.cli:display_keycodes"
gsc-monitor="pygsc.cli:gsc_monitor"
gsc-monitor-test-client="pygsc.cli:gsc_monitor_test_client"
gsc-monitor-test-server="pygsc.cli:gsc_monitor_test_server"
