[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygsc"
version = "0.9"
description = "Run command-line demos from a script."
authors = [{ name = "CD Clark III", email = "clifton.clark@gmail.com" }]
requires-python = "~=3.10.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "click",
    "pyparsing",
    "blessed",
    "urwid",
    "pygame",
]

[project.scripts]
gsc = "pygsc.cli:gsc"
gsc-record = "pygsc.cli:gsc_record"
gsc-display-keycodes = "pygsc.cli:display_keycodes"
gsc-monitor = "pygsc.cli:gsc_monitor"
gsc-monitor-test-client = "pygsc.cli:gsc_monitor_test_client"
gsc-monitor-test-server = "pygsc.cli:gsc_monitor_test_server"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-pudb>=0.7.0,<0.8",
    "pexpect",
]
